Correct double borders on gnome-settings

--- a/gtk-3.0/apps/gnome-terminal.css
+++ b/gtk-3.0/apps/gnome-terminal.css
@@ -1,5 +1,5 @@
-vte-terminal.terminal-screen,
+.terminal-screen,
 terminal-window {
-    background-color: #fff;
-    color: #000;
+    background-color: @theme_bg_color;
+    color: @theme_fg_color;
 }
